--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -184,7 +184,7 @@ jobs:
 
       - name: push container images to GAR (no browser)
         id: push-to-gar
-        uses: grafana/shared-workflows/actions/push-to-gar-docker@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
+        uses: grafana/shared-workflows/actions/push-to-gar-docker@7d18a46aafb8b875ed76a0bc98852d74b91e7f91 # v1.0.0
         with:
           environment: ${{ inputs.mode }}
           image_name: ${{ needs.preflight.outputs.repo_name }}
@@ -197,7 +197,7 @@ jobs:
           file: Dockerfile.no-browser
 
       - name: push container images to GAR (browser)
-        uses: grafana/shared-workflows/actions/push-to-gar-docker@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
+        uses: grafana/shared-workflows/actions/push-to-gar-docker@7d18a46aafb8b875ed76a0bc98852d74b91e7f91 # v1.0.0
         with:
           environment: ${{ inputs.mode }}
           image_name: ${{ needs.preflight.outputs.repo_name }}
@@ -242,7 +242,7 @@ jobs:
 
     # Commented out until we know it's working.
     # - name: Trigger argo workflow
-    #   uses: grafana/shared-workflows/actions/trigger-argo-workflow@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
+    #   uses: grafana/shared-workflows/actions/trigger-argo-workflow@7d18a46aafb8b875ed76a0bc98852d74b91e7f91 # v1.0.0
     #   with:
     #     namespace: synthetic-monitoring-cd
     #     workflow_template: deploy-${{ needs.preflight.outputs.repo_name }}
