--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -77,6 +77,9 @@ jobs:
       - name: build
         run: make build-native
 
+      - name: Download sm-k6
+        run: make sm-k6-native
+
       - name: lint
         run: make lint
 
