chore: Throttle renovate updates
Otherwise, updates are so frequent they become noise

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -37,6 +37,10 @@
       "matchManagers": ["gomod"],
       "matchPackageNames": "github.com/prometheus/*",
       "groupName": "prometheus-go"
+    },
+    {
+      "matchPackageNames": "**/renovate",
+      "extends": ["schedule:weekly"]
     }
   ],
 
