--- a/.github/release-please/release-please-config.json
+++ b/.github/release-please/release-please-config.json
@@ -8,7 +8,7 @@
         { "type": "feat", "section": "Features" },
         { "type": "fix", "section": "Fixes" },
         { "type": "docs", "section": "Documentation" },
-        { "type": "release", "section": "Release"}
+        { "type": "chore", "section": "Miscellaneous Chores" }
       ]
     }
   },
