--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -94,8 +94,6 @@ jobs:
         with:
           context: .
           push: false
-          file: Dockerfile.build
-          target: release
           outputs: type=tar,dest=dist/container-image.no-browser.${{ steps.build-info.outputs.os }}-${{ steps.build-info.outputs.arch }}.tar
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -105,8 +103,7 @@ jobs:
         with:
           context: .
           push: false
-          file: Dockerfile.build
-          target: with-browser
+          target: browser
           outputs: type=tar,dest=dist/container-image.browser.${{ steps.build-info.outputs.os }}-${{ steps.build-info.outputs.arch }}.tar
           cache-from: type=gha
           cache-to: type=gha,mode=max
