--- a/.github/workflows/validate_pr.yaml
+++ b/.github/workflows/validate_pr.yaml
@@ -73,7 +73,6 @@ jobs:
             type=raw,value=${{ steps.version.outputs.value }}
             type=sha,prefix=sha-,format=short
             latest
-          target: release
 
       - name: test docker build (browser)
         uses: grafana/shared-workflows/actions/build-push-to-dockerhub@7d18a46aafb8b875ed76a0bc98852d74b91e7f91 # v1.0.0
@@ -85,4 +84,4 @@ jobs:
             type=raw,value=${{ steps.version.outputs.value }}-browser
             type=sha,prefix=sha-,suffix=-browser,format=short
             latest-browser
-          target: with-browser
+          target: browser
