--- a/.github/release-please/release-please-config.json
+++ b/.github/release-please/release-please-config.json
@@ -13,6 +13,6 @@
     }
   },
   "draft-pull-request": true,
-  "pull-request-title-pattern": "Chore: release ${version}",
+  "pull-request-title-pattern": "chore: release ${version}",
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
