--- a/.github/release-please/release-please-config.json
+++ b/.github/release-please/release-please-config.json
@@ -5,10 +5,10 @@
       "bump-minor-pre-major": true,
       "include-component-in-tag": false,
       "changelog-sections": [
-        { "type": "chore", "section": "Miscellaneous Chores" },
-        { "type": "docs", "section": "Documentation" },
         { "type": "feat", "section": "Features" },
-        { "type": "fix", "section": "Fixes" }
+        { "type": "fix", "section": "Fixes" },
+        { "type": "docs", "section": "Documentation" },
+        { "type": "chore", "section": "Miscellaneous Chores" }
       ]
     }
   },
